Be to the point

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <!-- Signup -->
                 <li class="list-group-item d-flex justify-content-between align-items-center">
                     <div>
-                        1. Tilmeld dig ved at sende en tom email til listen
+                        1. Send en tom email til listen
                     </div>
                     <div>
                         <a href="mailto:karre-170-aarhus+subscribe@googlegroups.com" type="button"
@@ -52,22 +52,23 @@
                     </div>
                 </li>
 
-                <!-- Confirm -->
-                <li class="list-group-item d-flex justify-content-between align-items-center">
-                    2. Bekræft din tilmelding ved at svare på den email du
-                    modtager efter du har sendt den første email
-                </li>
-
                 <!-- Contact -->
                 <li class="list-group-item d-flex justify-content-between
-                    align-items-center">
+                align-items-center">
                     <div>
-                        3. Tilføj maillisten til dine kontakter.
+                        2. Tilføj maillisten til kontakter
                     </div>
                     <div>
                         <a href="contact.vcf" download class="btn btn-primary btn-sm">
                             Tilføj kontakt
                         </a>
+                    </div>
+                </li>
+
+                <!-- Confirm -->
+                <li class="list-group-item d-flex justify-content-between align-items-center">
+                    <div>
+                        3. Svar på bekræftelsesemailen<br><em>Tip: den kan gemme sig i spam!</em>
                     </div>
                 </li>
             </ol>
