--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 
+    <!-- Just a simple page view counter -->
+    <script src="https://cdn.counter.dev/script.js" data-id="4095a605-a908-4fd5-bf8f-5900185e9a73"
+        data-utcoffset="1"></script>
+
     <style>
         .container-sm {
             max-width: 540px;
