Rework to Vølundsgade 22-24

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 <head>
     <link rel="icon" href="favicon.svg" />
-    <title>Karré 170, Aarhus</title>
+    <title>Vølundsgade 22-24</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -32,39 +32,38 @@
             <!-- Title -->
             <header class="text-center">
                 <h1>📫 Mailliste</h1>
-                <h2 class="fw-lighter mb-4">Karré 170, Aarhus</h2>
+                <h2 class="fw-lighter mb-4">Vølundsgade 22-24</h2>
             </header>
 
             <!-- Description -->
             <p class="fw-light mb-4 text-center">
-                Dette er en åben gruppe for alle ejere og lejere, der bor i
-                Karré 170, Aarhus som inkluderer: Vester Allé 27-33, Vestergade
-                78-84 og Janus la Cours Gade 1-9.
+                Bliv en del af vores åbne e-mail-gruppe for alle ejere og lejere
+                på Vølundsgade 22-24, 2200 København N. hvor alle kan dele information og
+                skabe fællesskab - både med og uden Facebook.
             </p>
 
             <ol class="fw-light list-group">
-                <!-- Signup -->
+                <!-- Contact -->
                 <li class="list-group-item d-flex justify-content-between align-items-center">
                     <div>
-                        1. Send en tom email til listen
-                    </div>
-                    <div>
-                        <a href="mailto:karre-170-aarhus+subscribe@googlegroups.com" type="button"
-                            class="btn btn-primary btn-sm" id="firstButton">
-                            Send mail
-                        </a>
-                    </div>
-                </li>
-
-                <!-- Contact -->
-                <li class="list-group-item d-flex justify-content-between
-                align-items-center">
-                    <div>
-                        2. Tilføj maillisten til kontakter
+                        1. Tilføj maillisten til kontakter
                     </div>
                     <div>
                         <a href="contact.vcf" download class="btn btn-primary btn-sm">
                             Tilføj kontakt
+                        </a>
+                    </div>
+                </li>
+
+                <!-- Signup -->
+                <li class="list-group-item d-flex justify-content-between align-items-center">
+                    <div>
+                        2. Send en tom email til listen
+                    </div>
+                    <div>
+                        <a href="mailto:voelundsgade-22-24+subscribe@googlegroups.com" type="button"
+                            class="btn btn-primary btn-sm" id="firstButton">
+                            Send email
                         </a>
                     </div>
                 </li>
@@ -74,25 +73,31 @@
                     <div>
                         3. Svar på bekræftelsesemailen<br><em>Tip: den kan gemme sig i spam!</em>
                     </div>
+                    <div>
+                        <a href="mailto:" class="btn btn-primary btn-sm">
+                            Åbn email
+                        </a>
+                    </div>
                 </li>
             </ol>
 
             <!-- End note -->
             <div class="fw-light mt-4 text-center">
                 <p>
-                    Det er det, du er nu tilmeldt maillisten og vil modtage alle
-                    beskeder sendt til listen.
+                    Når du er tilmeldt modtager du beskeder fra andre beboere
+                    direkte i din indbakke.
                 </p>
                 <p>
-                    For selv at skrive ud sender du bare en email til <a
-                        href="mailto:karre-170-aarhus@googlegroups.com">karre-170-aarhus@googlegroups.com
-                    </a>
+                    Du kan sende beskeder til hele gruppen ved at svare eller
+                    skrive til gruppens e-mailadresse <a
+                    href="mailto:voelundsgade-22-24@googlegroups.com">voelundsgade-22-24@googlegroups.com</a>,
+                    hvorefter alle medlemmer kan læse og deltage i samtalen.
                 </p>
             </div>
 
             <footer class="text-center">
                 <p class="fw-lighter">
-                    Lavet af bestyrelsen i Ejerlavet ❤️
+                    Lavet af bestyrelsen ❤️
                 </p>
             </footer>
         </div>
