--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <!-- Contact -->
                 <li class="list-group-item d-flex justify-content-between align-items-center">
                     <div>
-                        1. Tilføj maillisten til kontakter
+                        1. Tilføj maillisten til dine kontakter
                     </div>
                     <div>
                         <a href="contact.vcf" download class="btn btn-primary btn-sm">
@@ -58,7 +58,7 @@
                 <!-- Signup -->
                 <li class="list-group-item d-flex justify-content-between align-items-center">
                     <div>
-                        2. Send en tom email til listen
+                        2. Send en tom email til listen for at blive tilmeldt
                     </div>
                     <div>
                         <a href="mailto:voelundsgade-22-24+subscribe@googlegroups.com" type="button"
